chore(deps): update openapi-generator-maven-plugin to v7
Version 7 contains a change that breaks the use of Lombok's builder in
generated models.
See https://github.com/OpenAPITools/openapi-generator/issues/15684

To work around that, I have activated the builder generation using the
`generateBuilders` configuration options. This generates methods that
can be used to build models using a fluent API.